# scummvm-tools

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  COPYING.BSD2  COPYING.LUA  COPYRIGHT  Makefile  Makefile.common  Makefile.mingw  NEWS  README  TODO  antipasto.scm  cfgg.scm  cli_main.cpp  cli_tools.cpp  cli_tools.h  compress.c  compress.cpp  compress.h  compress_agos.c  compress_agos.cpp  compress_agos.h  compress_gob.cpp  compress_gob.h  compress_kyra.cpp  compress_kyra.h  compress_queen.c  compress_queen.cpp  compress_queen.h  compress_saga.c  compress_saga.cpp  compress_saga.h  compress_san.cpp  compress_san.vcproj  compress_scumm_bun.cpp  compress_scumm_bun.h  compress_scumm_san.cpp  compress_scumm_san.h  (+161 more)
base/: internal_version.h
common/: algorithm.h  array.h  dcl.cpp  debug.cpp  endian.h  file.cpp  file.h  func.h  getopt.h  hash-str.h  hashmap.cpp  hashmap.h  md5.cpp  md5.h  memorypool.cpp  memorypool.h  module.mk  noncopyable.h  pack-end.h  pack-start.h  ptr.h  scummsys.h  str.cpp  str.h  stream.cpp  stream.h  substream.h  sys.h  textconsole.cpp  util.cpp  util.h  zlib.cpp  zlib.h
decompiler/: Makefile  block.cpp  block.h  cfg.h  codegen.cpp  codegen.h  control_flow.cpp  control_flow.h  decompiler.cc  decompiler.cpp  decompiler.rb  disassembler.cpp  disassembler.h  engine.cpp  engine.h  graph.cpp  graph.h  graph2.h  instruction.cpp  instruction.h  intv.cc  misc.cpp  misc.h  node.cpp  node.h  objectFactory.h  parser.h  reader.h  reassembler.cpp  reassembler.h  refcounted.h  simple_disassembler.cpp  simple_disassembler.h  stack.h  syntax.h  test.cc  value.cpp  (+4 more)
(+578 files in other folders)
